[workspace]
members = [
    "server",
    "client",
    "shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
eframe = "0.27"
egui = "0.27"